--- a/src/scss/theme/_dark.scss
+++ b/src/scss/theme/_dark.scss
@@ -31,6 +31,7 @@
 .dark-theme .contact__card-item:hover,
 .dark-theme .back__top {
     box-shadow: none;
+    transition: 0.3s;
 }
 
 .dark-theme .value__col-1__orbe,
