--- a/src/scss/layouts/corseul/_navigation.scss
+++ b/src/scss/layouts/corseul/_navigation.scss
@@ -28,6 +28,7 @@
         border: 3px solid var(--border-color);
         z-index: 20;
         cursor: pointer;
+        transition: 0.3s;
 
         & * {
             pointer-events: none;
