--- a/src/scss/pages/value/values/_value.scss
+++ b/src/scss/pages/value/values/_value.scss
@@ -16,6 +16,7 @@
     border-radius: 0.5rem;
     border: 4px solid var(--border-color2);
     padding: 0.5rem 0.65rem;
+    transition: 0.3s;
 
     @include mq(mq2) {
         padding: clamp(0.6rem, 1vw, 1.2rem) clamp(0.6rem, 1vw, 1.2rem)
@@ -35,7 +36,8 @@
             padding: 0.5rem;
             border-radius: 0.25rem;
             margin-right: 0.5rem;
-            transition: 0.4s;
+            transition: 0.3s;
+            transition: background-color 0.3s;
         }
     }
 
