--- a/src/scss/base/_boilerPlate.scss
+++ b/src/scss/base/_boilerPlate.scss
@@ -3,7 +3,7 @@
     - This code by ahmed ayob 
 
 */
-@use '../utils/mixins' as *;
+@use "../utils/mixins" as *;
 /*
 
     =============== BoilerPlate ===============
@@ -13,96 +13,102 @@
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    user-select: none;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  user-select: none;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    position: relative;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    background-color: var(--body-color);
-    color: var(--text-color);
-    transition: 0.3s; /* For animation dark mode */
+  position: relative;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  transition: 0.3s;
+  /* For animation dark mode */
 
-    @include mq(mq6) {
-        zoom: 1.5;
-    }
+  @include mq(mq7) {
+    zoom: 1.1;
+  }
+
+  @include mq(mq8) {
+    zoom: 1.3;
+  }
 }
 
 h1,
 h2,
 h3 {
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    color: var(--first-color-lighten);
-    text-decoration: none;
+  color: var(--first-color-lighten);
+  text-decoration: none;
 }
 
 img {
-    // max-width: 100%;
-    width: 100%;
-    height: auto;
+  // max-width: 100%;
+  width: 100%;
+  height: auto;
 }
 
 input,
 button {
-    font-family: var(--body-font);
-    outline: none;
-    border: none;
+  font-family: var(--body-font);
+  outline: none;
+  border: none;
 }
 
 .section__title {
-    font-size: clamp(var(--h2-font-size), 4vw, var(--h1-font-size) + 0.35rem);
-    margin-bottom: 1rem;
+  font-size: clamp(var(--h2-font-size), 4vw, var(--h1-font-size) + 0.35rem);
+  margin-bottom: 1rem;
 }
 
 .section__title span {
-    color: var(--second-color);
+  color: var(--second-color);
 }
 
 .section__subtitle {
-    font-size: clamp(var(--small-font-size), 4vw, var(--h3-font-size));
-    color: var(--second-color);
-    font-weight: var(--font-medium);
+  font-size: clamp(var(--small-font-size), 4vw, var(--h3-font-size));
+  color: var(--second-color);
+  font-weight: var(--font-medium);
 }
 
 main {
-    overflow: hidden; /* for the anmation scroll reveal*/
+  overflow: hidden;
+  /* for the anmation scroll reveal*/
 }
 
 /*========== Variables Dark theme ==========*/
 body.dark-theme {
-    --first-color: hsl(228, 66%, 62%);
-    --second-color: hsl(25, 57%, 54%);
-    --title-color: hsl(228, 8%, 95%);
-    --text-color: hsl(228, 8%, 70%);
-    --border-color: hsl(228, 16%, 14%);
-    --body-color: hsl(228, 12%, 8%);
-    --container-color: hsl(228, 16%, 12%);
+  --first-color: hsl(228, 66%, 62%);
+  --second-color: hsl(25, 57%, 54%);
+  --title-color: hsl(228, 8%, 95%);
+  --text-color: hsl(228, 8%, 70%);
+  --border-color: hsl(228, 16%, 14%);
+  --body-color: hsl(228, 12%, 8%);
+  --container-color: hsl(228, 16%, 12%);
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    width: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    width: 5px;
+  width: 5px;
 }
